[package]
name = "besmirch"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["midi", "convert", "audio"]
categories = [
  "command-line-utilities",
  "computer-vision",
  "multimedia::audio",
  "multimedia::images",
  "visualization`",
]
build = "build.rs"
repository = "https://github.com/michaelpennington/besmirch"
description = "An interface between audio and light"

[lib]
name = "besmirch"
path = "src/lib.rs"

[[bin]]
name = "besmirch"
path = "src/bin.rs"

[dependencies]
image = "0.24.2"
clap = "3.1.18"
edge-detection = "0.2.6"
bytemuck = "1.9.1"
thiserror = "1.0"

[build-dependencies]
rustc_version = "0.4.0"
